[gd_scene load_steps=14 format=3 uid="uid://dclk14k2k8l5d"]

[ext_resource type="TileSet" uid="uid://vusutmqak5xg" path="res://rooms/dungeon_tileset.tres" id="1_0bu5r"]
[ext_resource type="Script" path="res://menu/good_luck.gd" id="1_w4u1v"]
[ext_resource type="TileSet" uid="uid://bi56mq2i4t73y" path="res://rooms/dungeon_path.tres" id="2_lum3p"]
[ext_resource type="PackedScene" uid="uid://dg6gt2ihxhr8x" path="res://objects/dragon_fruit.tscn" id="3_ix4kx"]
[ext_resource type="FontVariation" uid="uid://dnwv2plgp22ay" path="res://assets/fonts/poco_import.tres" id="4_nffqc"]
[ext_resource type="AudioStream" uid="uid://p3peq4y7yfid" path="res://assets/audio/select.wav" id="6_lf18g"]

[sub_resource type="Animation" id="Animation_xps6r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Continue:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_tue5g"]
resource_name = "default"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Continue:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1bb6q"]
_data = {
"RESET": SubResource("Animation_xps6r"),
"default": SubResource("Animation_tue5g")
}

[sub_resource type="Animation" id="Animation_ug00j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SelectSound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7hvws"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SelectSound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2ilhi"]
resource_name = "fade_out"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q5knv"]
_data = {
"RESET": SubResource("Animation_ug00j"),
"fade_in": SubResource("Animation_7hvws"),
"fade_out": SubResource("Animation_2ilhi")
}

[node name="GoodLuck" type="Node2D"]
script = ExtResource("1_w4u1v")
metadata/_edit_lock_ = true

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(5, 5)
tile_set = ExtResource("1_0bu5r")
format = 2
layer_0/tile_data = PackedInt32Array(131076, 655360, 4, 131078, 655360, 4, 196612, 655360, 4, 262148, 655360, 4, 262149, 655360, 4, 262152, 655360, 4, 393220, 655360, 4, 589829, 655360, 4, 589830, 655360, 4, 196611, 655360, 4, 196616, 655360, 4, 393224, 655360, 4, 393225, 655360, 4, 327689, 655360, 4, 262153, 655360, 4, 458754, 655360, 4, 524290, 655360, 4, 327683, 655360, 4, 327684, 655360, 4, 262151, 655360, 4, 131079, 655360, 4, 196615, 655360, 4, 327687, 655360, 4, 327688, 655360, 4, 262147, 655360, 4, 393218, 655360, 4, 327682, 655360, 4, 262146, 655360, 4, 589826, 655360, 4, 196610, 655360, 4, 65540, 655360, 4, 4, 655360, 4, 5, 655360, 4, 3, 655360, 4, 1, 262144, 2, 2, 655360, 4, 65537, 655360, 4, 65536, 655360, 4, 0, 262144, 2, 196617, 655360, 4, 589827, 655360, 4, 524291, 655360, 4, 327681, 655360, 4, 262144, 655360, 4, 262145, 655360, 4, 393217, 655360, 4, 458753, 655360, 4, 589825, 655360, 4, 589824, 262144, 2, 524288, 655360, 4, 458752, 655360, 4, 393216, 655360, 4, 327680, 655360, 4, 524289, 655360, 4, 393219, 655360, 4, 458755, 655360, 4, 65541, 655360, 4, 131077, 655360, 4, 196613, 655360, 4, 327685, 655360, 4, 327686, 655360, 4, 262150, 655360, 4, 196614, 655360, 4, 131072, 655360, 4, 196608, 655360, 4, 393221, 655360, 4, 393222, 655360, 4, 393223, 655360, 4, 131073, 655360, 4, 65538, 655360, 4, 524292, 655360, 4, 589828, 655360, 4, 458760, 655360, 4, 458759, 655360, 4, 458758, 655360, 4, 458757, 655360, 4, 458756, 655360, 4, 196609, 655360, 4, 131074, 655360, 4, 65539, 655360, 4, 131075, 655360, 4, 131080, 655360, 4, 524294, 655360, 4, 524293, 655360, 4, 524299, 655360, 4, 458763, 655360, 4, 393227, 655360, 4, 327691, 655360, 4, 262155, 655360, 4, 196619, 655360, 4, 131083, 655360, 4, 65547, 655360, 4, 11, 655360, 4, 524296, 655360, 4, 524295, 655360, 4, 589831, 655360, 4, 589832, 655360, 4, 589833, 655360, 4, 589834, 655360, 4, 589835, 655360, 4, 65542, 655360, 4, 6, 655360, 4, 7, 655360, 4, 65543, 655360, 4, 8, 655360, 4, 65544, 655360, 4, 9, 655360, 4, 65545, 655360, 4, 131081, 655360, 4, 131082, 655360, 4, 65546, 655360, 4, 10, 655360, 4, 196618, 655360, 4, 262154, 655360, 4, 327690, 655360, 4, 393226, 655360, 4, 458762, 655360, 4, 524298, 655360, 4, 524297, 655360, 4, 458761, 655360, 4)
metadata/_edit_lock_ = true

[node name="PathMap" type="TileMap" parent="."]
scale = Vector2(5, 5)
tile_set = ExtResource("2_lum3p")
format = 2
layer_0/tile_data = PackedInt32Array(327686, 65538, 2, 262149, 65538, 0, 262150, 65538, 0, 327685, 65538, 2, 262148, 2, 0, 262151, 131074, 0, 327684, 2, 2, 327687, 131074, 2)
metadata/_edit_lock_ = true

[node name="DragonFruit" parent="." instance=ExtResource("3_ix4kx")]
z_index = 0
position = Vector2(480, 360)
scale = Vector2(5, 5)
metadata/_edit_lock_ = true

[node name="TextPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1bb6q")
}

[node name="TransitionFade" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q5knv")
}

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 1
offset_right = 960.0
offset_bottom = 800.0
color = Color(0, 0, 0, 1)

[node name="Continue" type="Label" parent="."]
offset_top = 680.0
offset_right = 960.0
offset_bottom = 800.0
theme_override_fonts/font = ExtResource("4_nffqc")
theme_override_font_sizes/font_size = 40
text = "Press Z to continue..."
horizontal_alignment = 1

[node name="Line 1" type="Label" parent="."]
offset_top = 35.0
offset_right = 960.0
offset_bottom = 155.0
theme_override_fonts/font = ExtResource("4_nffqc")
theme_override_font_sizes/font_size = 40
text = "Your goal is to acquire the golden dragon fruit,
"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Line 2" type="Label" parent="."]
offset_top = 80.0
offset_right = 960.0
offset_bottom = 200.0
theme_override_fonts/font = ExtResource("4_nffqc")
theme_override_font_sizes/font_size = 40
text = "The most expensive and sought after fruit."
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Line 3" type="Label" parent="."]
offset_top = 155.0
offset_right = 960.0
offset_bottom = 275.0
theme_override_fonts/font = ExtResource("4_nffqc")
theme_override_font_sizes/font_size = 40
text = "Face the dungeon's challenge and it will be yours."
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Line 4" type="Label" parent="."]
offset_top = 200.0
offset_right = 960.0
offset_bottom = 320.0
theme_override_fonts/font = ExtResource("4_nffqc")
theme_override_font_sizes/font_size = 40
text = "Can you two reach the end and reap the reward?"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_lf18g")
volume_db = -5.0

[connection signal="animation_finished" from="TransitionFade" to="." method="_on_transition_fade_animation_finished"]
